tests/functional/lang/eval-fail-not-throws.err.exp
error:
       … caused by explicit throw
         at /pwd/eval-fail-not-throws.nix:1:4:
            1| ! (throw "uh oh!")
             |    ^
            2|

       error: uh oh!
